# tweeterIC_sentiment

./: pyproject.toml  tweet_analysis.ipynb
.ipynb_checkpoints/: tweet_analysis-checkpoint.ipynb
tests/: test_trump_tweets.py
