[tool.poetry]
name = "trump-tweets"
version = "0.1.0"
description = ""
authors = ["Lee-Roy King <leeroywking@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
numpy = "^1.19.0"
matplotlib = "^3.3.0"
jupyter = "^1.0.0"
jupyterlab = "^2.2.0"
vaderSentiment = "^3.3.2"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
